# msbt

./: CMakeLists.txt  Readme.md  cmakelists.txt  readme.md  tags.md
.github/workflows/: release.yml
msbt_to_yaml/: CMakeLists.txt  cmakelists.txt
msbt_to_yaml/src/: main.cpp
msbt_to_yaml/src/include/io/: file.h
src/: msbt.cpp  msbt_text.cpp  tags.cpp  tags.h  util.h
src/include/msbt/: msbt.h  tags.h
src/include/msbt/tags/: animation_tag.h
src/sections/: attribute_section.cpp  label_section.cpp  text_section.cpp
src/tags/: float_flag_tag.cpp  font_color_tag.cpp  font_size_tag.cpp  font_tag.cpp  integer_flag_tag.cpp  string_flag_tag.cpp  unknown_tag.cpp
tests/: CMakeLists.txt  cmakelists.txt
tests/src/: main.cpp
tests/src/include/io/: file.h
tests/src/include/utils/: file_util.h
